WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
137380
[iOS] Back-to-back fullscreen videos result in incorrectly sized videos
https://bugs.webkit.org/show_bug.cgi?id=137380
Summary
[iOS] Back-to-back fullscreen videos result in incorrectly sized videos
Jer Noble
Reported
2014-10-02 22:21:20 PDT
[iOS] Back-to-back fullscreen videos result in incorrectly sized videos
Attachments
Patch
(3.01 KB, patch)
2014-10-02 22:27 PDT
,
Jer Noble
eric.carlson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2014-10-02 22:27:56 PDT
Created
attachment 239178
[details]
Patch
Jer Noble
Comment 2
2014-10-02 22:28:31 PDT
rdar://problem/18436044
Jer Noble
Comment 3
2014-10-03 13:07:05 PDT
Committed
r174277
: <
http://trac.webkit.org/changeset/174277
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug